# auv_gps_navigation

./: CMakeLists.txt  README.md  package.xml
launch/: auv_gps_navigation_sim.launch
rviz/: gps_nav.rviz
scripts/: auv_gps_navigation_node.py  navigation_sim.py
urdf/: bluerov2.urdf  bluerov2.xacro
