<?xml version="1.0"?>
<package format="3">
  <name>auv_gps_navigation</name>
  <version>0.1.0</version>
  <description>A ROS2 package for autonomous underwater vehicle (AUV) navigation using GPS and IMU data.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>simple_pid</depend>
  
  <exec_depend>xacro</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>setuptools</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>